force-app/main/default/objects/Lead/fields/Additional_Products_and_Services__c.field-meta.xml
<CustomField>
    <fullName>Additional_Products_and_Services__c</fullName>
    <label>Additional Products and Services</label>
    <length>255</length>
    <type>Text</type>
</CustomField>