force-app/main/default/objects/Lead/fields/Attended_Tour__c.field-meta.xml
<CustomField>
    <fullName>Attended_Tour__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Attended Tour</label>
    <type>Checkbox</type>
</CustomField>