force-app/main/default/objects/Lead/fields/Book_A_Space_Id__c.field-meta.xml
<CustomField>
    <fullName>Book_A_Space_Id__c</fullName>
    <externalId>true</externalId>
    <label>Book A Space Id</label>
    <length>150</length>
    <type>Text</type>
</CustomField>