force-app/main/default/objects/Lead/fields/Book_A_Space_Sync_Status__c.field-meta.xml
<CustomField>
    <fullName>Book_A_Space_Sync_Status__c</fullName>
    <label>Book A Space Sync Status</label>
    <type>TextArea</type>
</CustomField>