force-app/main/default/objects/Lead/fields/Campaign_External_ID__c.field-meta.xml
<CustomField>
    <fullName>Campaign_External_ID__c</fullName>
    <externalId>true</externalId>
    <label>Campaign External ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>