force-app/main/default/objects/Lead/fields/Current_Location__c.field-meta.xml
<CustomField>
    <fullName>Current_Location__c</fullName>
    <inlineHelpText>Please enter the current location of the lead at the competitor.</inlineHelpText>
    <label>Current Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>