force-app/main/default/objects/Lead/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>custom description probably created becasuse description standard mapped to contact and this one to opp</description>
    <label>Description</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>