force-app/main/default/objects/Lead/fields/Desired_Location__c.field-meta.xml
<CustomField>
    <fullName>Desired_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Desired Location</label>
    <referenceTo>Locations__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>