force-app/main/default/objects/Lead/fields/From_Integration_User__c.field-meta.xml
<CustomField>
    <fullName>From_Integration_User__c</fullName>
    <defaultValue>false</defaultValue>
    <label>From Integration User ?</label>
    <type>Checkbox</type>
</CustomField>