force-app/main/default/objects/Lead/fields/Interested_in__c.field-meta.xml
<CustomField>
    <fullName>Interested_in__c</fullName>
    <label>Interested in</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Product_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Interested_in</valueSetName>
    </valueSet>
</CustomField>