force-app/main/default/objects/Lead/fields/LeadCreatedDate__c.field-meta.xml
<CustomField>
    <fullName>LeadCreatedDate__c</fullName>
    <description>for mapping</description>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Created Date</label>
    <type>DateTime</type>
</CustomField>