force-app/main/default/objects/Lead/fields/Location_Area__c.field-meta.xml
<CustomField>
    <fullName>Location_Area__c</fullName>
    <label>Location Area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Area</valueSetName>
    </valueSet>
</CustomField>