force-app/main/default/objects/Lead/fields/Location_from_web__c.field-meta.xml
<CustomField>
    <fullName>Location_from_web__c</fullName>
    <label>Location from web</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Desired_Location</valueSetName>
    </valueSet>
</CustomField>