force-app/main/default/objects/Lead/fields/Lost_Reason__c.field-meta.xml
<CustomField>
    <fullName>Lost_Reason__c</fullName>
    <label>Lost Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Incorrect Details</fullName>
            </value>
            <value>
                <fullName>Looking for Hotel In Fattal</fullName>
            </value>
            <value>
                <fullName>No Response</fullName>
            </value>
            <value>
                <fullName>System Check</fullName>
            </value>
            <value>
                <fullName>Not relevant to the Sales Department</fullName>
            </value>
            <value>
                <fullName>Customer stopped answering - after 6 attempts</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>Cancelled Lead</fullName>
            </value>
            <value>
                <fullName>Moked - City without ROOMS sites</fullName>
            </value>
            <value>
                <fullName>Moked - Low budget</fullName>
            </value>
            <value>
                <fullName>Moked - Looking for an independent office</fullName>
            </value>
            <value>
                <fullName>Moked - Customer changed their mind</fullName>
            </value>
            <value>
                <fullName>Moked - Customer signed with competitor</fullName>
            </value>
            <value>
                <fullName>Moked - Site didnt open yet</fullName>
            </value>
            <value>
                <fullName>Complex s Service request</fullName>
            </value>
            <value>
                <fullName>Customer stopped responding</fullName>
                <isActive>false</isActive>
                <label>Customer stopped responding</label>
            </value>
            <value>
                <fullName>Duplicate lead</fullName>
                <isActive>false</isActive>
                <label>Duplicate lead</label>
            </value>
            <value>
                <fullName>Incorrect information</fullName>
                <isActive>false</isActive>
                <label>Incorrect information</label>
            </value>
            <value>
                <fullName>Maybe in the future</fullName>
                <isActive>false</isActive>
                <label>Maybe in the future</label>
            </value>
            <value>
                <fullName>Not relevant</fullName>
                <isActive>false</isActive>
                <label>Not relevant</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>