force-app/main/default/objects/Lead/fields/Mobile_for_mapping__c.field-meta.xml
<CustomField>
    <fullName>Mobile_for_mapping__c</fullName>
    <formula>TEXT(  VALUE( MobilePhone )  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mobile for mapping</label>
    <type>Text</type>
</CustomField>