force-app/main/default/objects/Lead/fields/Moked_s_Losts__c.field-meta.xml
<CustomField>
    <fullName>Moked_s_Losts__c</fullName>
    <formula>AND(ISPICKVAL(Status,&quot;Unqualified&quot;),  BEGINS(TEXT(Lost_Reason__c), &quot;Moked&quot;)  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Moked&apos;s Losts</label>
    <type>Checkbox</type>
</CustomField>