force-app/main/default/objects/Lead/fields/Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Type__c</fullName>
    <label>Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>On_demand</fullName>
                <label>On demand</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>