force-app/main/default/objects/Lead/fields/Product_Type_From_Web__c.field-meta.xml
<CustomField>
    <fullName>Product_Type_From_Web__c</fullName>
    <label>Product Type From Web</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hot Desk</fullName>
            </value>
            <value>
                <fullName>Open Space</fullName>
            </value>
            <value>
                <fullName>Private Office for 1-4</fullName>
            </value>
            <value>
                <fullName>Private Office for 5-8</fullName>
            </value>
            <value>
                <fullName>Private Office for 9-14</fullName>
            </value>
            <value>
                <fullName>Private Office for 15+</fullName>
            </value>
            <value>
                <fullName>Meeting Room</fullName>
            </value>
            <value>
                <fullName>Event Space</fullName>
            </value>
            <value>
                <fullName>Daily Service</fullName>
            </value>
            <value>
                <fullName>Daily Office</fullName>
            </value>
            <value>
                <fullName>Classroom</fullName>
            </value>
            <value>
                <fullName>CoworkingSpace</fullName>
            </value>
            <value>
                <fullName>Meetingroom</fullName>
            </value>
            <value>
                <fullName>Office</fullName>
            </value>
            <value>
                <fullName>Event</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>DailyOpenSpace</fullName>
            </value>
            <value>
                <fullName>MonthlyOpenSpace</fullName>
            </value>
            <value>
                <fullName>DailyOffice</fullName>
            </value>
            <value>
                <fullName>MonthlyOffice</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>