force-app/main/default/objects/Lead/fields/SubSource__c.field-meta.xml
<CustomField>
    <fullName>SubSource__c</fullName>
    <label>Sub Source</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>LeadSource</controllingField>
        <restricted>true</restricted>
        <valueSetName>Source_from_lead</valueSetName>
    </valueSet>
</CustomField>