force-app/main/default/objects/Lead/fields/Unqualified__c.field-meta.xml
<CustomField>
    <fullName>Unqualified__c</fullName>
    <formula>ISPICKVAL(Status,&quot;Unqualified&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unqualified</label>
    <type>Checkbox</type>
</CustomField>