force-app/main/default/objects/Lead/fields/Voicenter_Lead_Call_ID__c.field-meta.xml
<CustomField>
    <fullName>Voicenter_Lead_Call_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Voicenter Lead Call ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>