force-app/main/default/objects/Lead/validationRules/Lead_No_Hebrew_On_Conversion.validationRule-meta.xml
<ValidationRule>
    <fullName>Lead_No_Hebrew_On_Conversion</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    ISPICKVAL(Status, &quot;Converted&quot;),
    OR(
        REGEX(FirstName, &quot;[\\u0590-\\u05FF]+&quot;),
        REGEX(LastName, &quot;[\\u0590-\\u05FF]+&quot;)
    )
)</errorConditionFormula>
    <errorMessage>You cannot convert this lead because the first name or last name contains Hebrew characters.</errorMessage>
</ValidationRule>