force-app/main/default/objects/Lead/validationRules/Number_of_members_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Number_of_members_Mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISCHANGED(Status ) , ISPICKVAL(Status , &apos;Converted&apos;), ISNULL(Number_of_potential_members__c), ISPICKVAL(Product_Type__c , &apos;Standard&apos;) )</errorConditionFormula>
    <errorDisplayField>Number_of_potential_members__c</errorDisplayField>
    <errorMessage>&apos;Number Of Potential Members&apos; cannot be blank when converting a Lead</errorMessage>
</ValidationRule>