force-app/main/default/objects/Lead/validationRules/unqualifed_without_lost_reason.validationRule-meta.xml
<ValidationRule>
    <fullName>unqualifed_without_lost_reason</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL( Status , &quot;Unqualified&quot;) &amp;&amp; ISBLANK (TEXT(( Lost_Reason__c) ))</errorConditionFormula>
    <errorMessage>If you want to close the lead as unqualified, fill in the Lost Reason field</errorMessage>
</ValidationRule>