force-app/main/default/objects/Lead/listViews/All_open_leads.listView-meta.xml
<ListView>
    <fullName>All_open_leads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATUS</columns>
    <columns>SubSource__c</columns>
    <columns>Location_from_web__c</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>equals</operation>
        <value>New Lead,REDIAL,Working On</value>
    </filters>
    <label>All open leads</label>
</ListView>