force-app/main/default/objects/Lead/listViews/Moked_Queue_for_Lead_Lead.listView-meta.xml
<ListView>
    <fullName>Moked_Queue_for_Lead_Lead</fullName>
    <columns>FULL_NAME</columns>
    <columns>Interested_in__c</columns>
    <columns>Desired_Location__c</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>LEAD.LEAD_SOURCE</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.MOBILE_PHONE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>Product_Type__c</columns>
    <filterScope>Queue</filterScope>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>notEqual</operation>
        <value>Unqualified</value>
    </filters>
    <label>Moked Queue</label>
    <queue>Moked_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>