force-app/main/default/objects/Lead/listViews/My_Leads.listView-meta.xml
<ListView>
    <fullName>My_Leads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.PHONE</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.LEAD_SOURCE</columns>
    <columns>ACTION_CADENCE</columns>
    <columns>ACTION_CADENCE_ASSIGNEE</columns>
    <columns>ACTION_CADENCE_STATE</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>notEqual</operation>
        <value>Unqualified</value>
    </filters>
    <label>My Leads</label>
</ListView>