force-app/main/default/objects/Lead/listViews/On_Demand_Glilot_Lead.listView-meta.xml
<ListView>
    <fullName>On_Demand_Glilot_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>On Demand Glilot</label>
    <queue>On_Demand_Glilot</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>