force-app/main/default/objects/Lead/listViews/On_demand_Modiin_Queue_Lead.listView-meta.xml
<ListView>
    <fullName>On_demand_Modiin_Queue_Lead</fullName>
    <columns>LEAD.COMPANY</columns>
    <columns>FULL_NAME</columns>
    <columns>LEAD.PHONE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>Product_Type_From_Web__c</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>SubSource__c</columns>
    <columns>LEAD.STATUS</columns>
    <filterScope>Queue</filterScope>
    <label>On Demand Modi&apos;in</label>
    <queue>On_demand_Modiin</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>