force-app/main/default/objects/Lead/listViews/On_demand_Petah_Tikva_Lead.listView-meta.xml
<ListView>
    <fullName>On_demand_Petah_Tikva_Lead</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.UNREAD</columns>
    <filterScope>Queue</filterScope>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>equals</operation>
        <value>New Lead,Working On</value>
    </filters>
    <label>On Demand Petah Tikva</label>
    <queue>On_demand_Petah_Tikva</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>